[gd_scene load_steps=14 format=3 uid="uid://hhy78o5qolno"]

[ext_resource type="Script" path="res://Engine/Scenes/StageSelect/StageSelect.gd" id="1_0kr35"]
[ext_resource type="Texture2D" uid="uid://dqe6i8xvwotle" path="res://Assets/Backgrounds/stages0.png" id="1_6aai7"]
[ext_resource type="PackedScene" uid="uid://bho6th882qje0" path="res://Engine/Scenes/StageSelect/StagesOverview.tscn" id="2_nrtxk"]
[ext_resource type="PackedScene" uid="uid://c3vf0fdejs72s" path="res://Engine/Scenes/StageSelect/StageDetails.tscn" id="4_26rrt"]
[ext_resource type="Script" path="res://Engine/Resources/DataContainers/Stage/Stage.gd" id="6_a1317"]
[ext_resource type="FontFile" uid="uid://dqdbst8avnfuo" path="res://Assets/Fonts/Lady Radical.ttf" id="6_asf3s"]
[ext_resource type="Script" path="res://Engine/Resources/UtilityNode/BackButton.gd" id="8_fl1vr"]
[ext_resource type="Script" path="res://Engine/Resources/Singletons/GuiEnabler.gd" id="9_a0qlk"]
[ext_resource type="Texture2D" uid="uid://mds6jllxer0h" path="res://Assets/Sprites/icons.png" id="9_l3xwp"]

[sub_resource type="Resource" id="Resource_ithns"]
script = ExtResource("6_a1317")
name = "cavern"
size = Vector2i(10, 10)
monsters = 12
min_power = 1
max_power = 2
locked = false
completed = false
mods = Array[Resource("res://Engine/Resources/DataContainers/Stage/StageMod.gd")]([])

[sub_resource type="LabelSettings" id="LabelSettings_pehmt"]
font = ExtResource("6_asf3s")
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_baxs2"]
atlas = ExtResource("9_l3xwp")
region = Rect2(22, 44, 12, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjf3c"]
atlas = ExtResource("9_l3xwp")
region = Rect2(34, 44, 12, 8)

[node name="StageSelect" type="Control"]
layout_mode = 3
anchor_right = 0.25
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
script = ExtResource("1_0kr35")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6aai7")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 335.0
offset_bottom = 144.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StagesOverview" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_nrtxk")]
unique_name_in_owner = true
layout_mode = 2

[node name="StageDetails" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_26rrt")]
unique_name_in_owner = true
layout_mode = 2
stage = SubResource("Resource_ithns")

[node name="QuestNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 10.0
offset_right = -10.0
grow_horizontal = 0
size_flags_vertical = 1
text = "QUEST_GLORY_DAYS"
label_settings = SubResource("LabelSettings_pehmt")

[node name="BackButton" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 7.0
offset_right = 22.0
offset_bottom = 15.0
script = ExtResource("8_fl1vr")

[node name="Normal" type="TextureRect" parent="BackButton"]
layout_mode = 2
texture = SubResource("AtlasTexture_baxs2")

[node name="Hovered" type="TextureRect" parent="BackButton"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_yjf3c")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)

[node name="GuiEnabler" type="Node" parent="."]
script = ExtResource("9_a0qlk")
_disabled = 0

[connection signal="icon_selected" from="MarginContainer/VBoxContainer/StagesOverview" to="." method="_on_stages_overview_icon_selected"]
[connection signal="interacted" from="MarginContainer/VBoxContainer/StageDetails" to="." method="_on_stage_details_interacted"]
